FileTypes: fix layout of the FileTypeWindow.

* Fixes #10359.
* Thanks to Laurent Chea for investigating and identifying the problem.
His patch was not used because it makes more changes than needed.